# pyTorch_Meshing

./: CMakeLists.txt  README.md  centroid_fields.cpp  simple_npz_reader.py
